objects/MaintenanceAsset.object
<CustomObject>
    <fields>
        <fullName>Branch_Code_BackendUse__c</fullName>
        <label>Branch_Code_BackendUse</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Branch_Code__c</fullName>
        <label>Branch_Code</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sub Type</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>$Source.Branch_Code__c</field>
                <operation>equals</operation>
                <valueField>FSL_SubType__c.Branch_Code__c</valueField>
            </filterItems>
            <filterItems>
                <field>FSL_SubType__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FSL_SubType__c</referenceTo>
        <relationshipLabel>Maintenance Assets</relationshipLabel>
        <relationshipName>Maintenance_Assets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Branch_Code_Changed</fullName>
        <active>true</active>
        <description>validate the branch code against the sub type</description>
        <errorConditionFormula>IF( Branch_Code__c !=  Branch_Code_BackendUse__c , true, false)</errorConditionFormula>
        <errorMessage>Branch Code can be changed</errorMessage>
    </validationRules>
</CustomObject>